stylesProjects.css
body {
    height: 100vh;
    width: 100vw;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    background-color: white;
    font-family: 'Overlock';
}

/* Menu Bar */

.navbar {
    width: 100%;
    height: 80px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-top: 10px;
}

.name h1 {
    font-size: 30px;
}

.menu {
    display: flex;
    gap: 40px;
}

.menu a {
    font-size: 20px;
    text-decoration: none;
    color: black;
}
.menu a:hover {
    text-decoration: underline;
}

.dropdownPerson,
.dropdownInterest {
    position: relavtive;
    display: inline-block;
}

.activePerson:hover {
    text-decoration: underline;
}
.activeInterest:hover {
    text-decoration: underline;
}

.dropdownPerson:hover .dropdownPersonContent {
    display: flex;
    gap: 40px;
    padding-top: 20px;
}
.dropdownInterest:hover .dropdownInterestContent {
    display: flex;
    gap: 40px;
    padding-top: 20px;
}

.dropdownPersonContent {
    display: none;
    position: absolute;
    transform: translateX(-15%);
    z-index: 1;
}
.dropdownInterestContent {
    display: none;
    position: absolute;
    transform: translateX(-35%);
    z-index: 1;
}

.dropdownPersonContent a {
    padding: 5px 10px;
    border: 2px solid black;
    border-radius: 30px;
}

.dropdownInterestContent a {
    padding: 5px 10px;
    border: 2px solid black;
    border-radius: 30px;
}

.location h1{
    font-size: 30px;
}

/* Main Body */

.content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.discordMusicBot {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 80px;
}

.leftDiscordMusicBot {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.leftDiscordMusicBot h1 {
    font-size: 40px;
    margin-bottom: 0.1em;
}

.leftDiscordMusicBot h2 {
    font-size: 22px;
    margin-top: 0.1em;
}

.leftDiscordMusicBot ul {
    font-size: 22px;
}

.rightDiscordMusicBot {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.iconGithubRepoDiscord {
    width: 100px;
    height: 100px;
    border-radius: 50%;
}

.discordBotTest {
    width: 200px;
    height: 300px;
    padding: 10px;
    border-radius: 10%;
    object-fit: cover;
    cursor: zoom-in;
}

.discordBotTest.zoomed {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(2.5);
    cursor: zoom-out;
}


.userInfoApp {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 80px;
}

.leftInfoApp {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.rightInfoApp {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.rightInfoApp h1 {
    font-size: 40px;
    margin-bottom: 0.1em;
}

.rightInfoApp h2 {
    font-size: 22px;
    margin-top: 0.1em;
}

.rightInfoApp ul {
    font-size: 22px;
}

.iconGithubRepoApp {
    width: 100px;
    height: 100px;
    border-radius: 50%;
}

.userApp {
    width: 600px;
    height: 300px;
    padding: 10px;
    border-radius: 10%;
    object-fit: cover;
    cursor: zoom-in;
}

.userApp.zoomed {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(2.5);
    cursor: zoom-out;
}

